moving through RVs

--- a/chapter_estimators.tex
+++ b/chapter_estimators.tex
@@ -160,6 +160,8 @@ we can actually compute using our data; the estimator is the abstract mathematic
 thing whose behavior we will explore as a way to understand the suitability
 of our choice of statistic.
 
+% SWO: the hat *isn't* a function; instead it's showing an intended correspondence
+
 \subsection{Consistent estimators}
 
 Let me start with what will seem like a very inane choice of statistic.
