--- a/chapter_probability.tex
+++ b/chapter_probability.tex
@@ -191,7 +191,7 @@ Just as ``probability'' had frequentist and Bayesian definitions, so there are
 multiple definitions of \emph{conditional probability}. The easiest
 (``Kolomogorov'') definition is:
 \begin{equation*}
-\prob{A | B} = \frac{\prob{A \cap B}}{\prob{B}},
+\prob{A | B} \defeq \frac{\prob{A \cap B}}{\prob{B}},
 \end{equation*}
 where $\prob{A | B}$ is pronounced ``the probability of $A$ given $B$''.
 
@@ -218,3 +218,7 @@ probability of $A$ given that $B$ happened is equal to the probability of $A$
 without knowing anything about $B$: if $A$ and $B$ are independent, then
 $\prob{A | B} = \prob{A}$, and thus $\prob{A \cap B} = \prob{A} \times
 \prob{B}$.
+
+\section{Wait, but what's the actual probability of anything?}
+
+SWO
