--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
 \newcommand{\var}[1]{\mathbb{V}\left[{#1}\right]}
 \newcommand{\cov}[1]{\mathrm{Cov}\!\left[{#1}\right]}
 \newcommand{\defeq}{\stackrel{\text{def}}{=}}
+\newcommand{\dd}{\, \mathrm{d}}
 
 \title{Statistical testing for scientists: principles of exact, approximate, and empirical tests}
 \author{Scott W. Olesen}
