--- a/chapter_preface.tex
+++ b/chapter_preface.tex
@@ -3,34 +3,38 @@
 \chapter{Preface}
 
 As a graduate student and postdoc in the life sciences, I saw that many of my
-colleauges, had substantial quantitative training and experience. They were
-very able to hack together fairly sensible quantitative and statistical methods
-to answer their scientific questions. I found, however, that there was often a
-steep drop-off when it came time to apply statistical rigor to these hacky
+colleauges had substantial training and experience in quantitative methods. They were
+very able to hack together sensible ways to approach their statistical problems.
+I found, however, that there was often a
+steep drop-off in their ability to apply statistical rigor to these \textit{ad hoc}
 methods.
 
 I think this gap between the ability to hack something together and the
 understanding to make something rigorous is partly born out of a gap in
 educational materials. There are plenty of introductory statistics
-textbooks that explain what a mean is, and there are plenty of statistical
-test cookbooks that well you what assumptions go into a $t$-test, and
-there are plenty of books and articles on statistics meants for people
-with a graduate-level education in statistics or math. There are few
+textbooks that explain what a mean is. There are also plenty of statistical
+test cookbooks that well you what assumptions are made when using a $t$-test.
+And finally, there are plenty of books and articles on statistics meants for people
+with a graduate-level education in statistics or math. However, there are few
 resources for people who are mature and shrewd quantitative thinkers but
-who don't have a half dozen statistics courses under their belt.
+who do not have a half dozen statistics courses under their belt.
 
-I think the situation is analogous to learning a foreign language as an
-adult. I find that it is easy to find books for children, which are at my
-level in terms of grammar and vocabulary but thematically boring, and
-there are books for adults, which are thematically interesting but way
-over my head. I wanted to write a book about statistical tests that was
+To me, this situation is analogous to when I tried to learn a foreign language as an
+adult. It was easy for me to find books written for children. These books are at my
+reading level in terms of grammar and vocabulary, but they are thematically boring.
+On the other hand, books for adults are thematically interesting but completely
+intractable in terms of vocabulary and grammar.
+I wanted to write a book about statistics that is
 thematically \emph{and} ``gramatically'' appropriate.
 
-This is not a book for people who want to push the boundaries of what
-statisticians think are interesting mathematical problems. Nor is it
-a a cookbook that tells you what statistical test to run on your data.
-I want to give you the ability to reason about why to do a test and how to
-formulate one. Rather than telling you which steps to generate a $p$-value
+I am not a statistician, and this is not a book for people who want to push the
+boundaries of what
+statisticians think are interesting problems. It is also not
+a cookbook that tells you what statistical test to run on your data. There
+are plenty of those already.
+Instead, my goal is to give you the ability to reason about why to do a statistical
+test and how to
+formulate your own. Rather than telling you which steps to generate a $p$-value
 in a specific case, I show how $p$-values come about in general and how to
 derive them for specific cases.
 
