--- a/chapter_probability.tex
+++ b/chapter_probability.tex
@@ -3,7 +3,8 @@
 \chapter{Probability}
 \label{chapter:probability}
 
-To understand statistics, it's critical to have a grasp of basic concepts in
+To develop a robust understanding of statistics, it is critical to have a grasp
+of basic concepts in
 probability, which is an entire branch of mathematics. Here I will give you
 the essentials so you can have a grasp of probability theory.
 
